# OnnxGraphQt

./: LICENSE  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile  build.bash  run.bash
onnxgraphqt/: __init__.py  __main__.py  add_node_widgets.py  change_channel_widgets.py  change_opset_widgets.py  custom_properties.py  custom_properties_bin.py  main.py  main_window.py  menubar.py  menubar_widgets.py  onnx_graph.py  onnx_node.py  onnx_node_graph.py  run_dagre_server.py  splash_screen.py  widgets_add_node.py  widgets_change_channel.py  widgets_change_opset.py  widgets_combine_graphs.py  widgets_combine_network.py  widgets_constant_shrink.py  widgets_delete_node.py  widgets_extra_network.py  widgets_extract_network.py  widgets_generate_operator.py  widgets_initialize_batchsize.py  widgets_menubar.py  widgets_message_box.py  widgets_modify_attrs.py  widgets_node_search.py  widgets_rename_op.py
onnxgraphqt/autolayout/: networkx_layout.py  onnx_to_dict.py  request_layout.py  sugiyama_layout.py
onnxgraphqt/dagre_server/: dagre.js  index.js  view-grapher.js  view.js
onnxgraphqt/data/: onnx_opsets.json
onnxgraphqt/graph/: onnx_node.py  onnx_node_graph.py
onnxgraphqt/graph/autolayout/: __init__.py  sugiyama_layout.py
onnxgraphqt/utils/: color.py  dtype.py  op_names.py  operators.py  opset.py  style.py  widgets.py
onnxgraphqt/widgets/: custom_node_item.py  custom_nodeitem_vertical.py  custom_properties.py  custom_properties_bin.py  splash_screen.py  widgets_add_node.py  widgets_change_channel.py  widgets_change_input_ouput_shape.py  widgets_change_opset.py  widgets_combine_network.py  widgets_constant_shrink.py  widgets_delete_node.py  widgets_extract_network.py  widgets_generate_operator.py  widgets_inference_test.py  widgets_initialize_batchsize.py  widgets_menubar.py  widgets_message_box.py  widgets_modify_attrs.py  widgets_node_search.py  widgets_rename_op.py
