[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "OnnxGraphQt"
version = "0.0.1"
authors = [
  { name="fateshelled", email="53618876+fateshelled@users.noreply.github.com" },
]
description = "ONNX model visualizer"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
  "PySide2",
  "numpy",
  "pillow",
  "onnx",
  "onnx-simplifier",
  "protobuf==3.20.0",
  #"onnx_graphsurgeon --index-url https://pypi.ngc.nvidia.com", 
  "onnx_graphsurgeon", 
  #"git+https://github.com/jchanvfx/NodeGraphQt.git@v0.5.2#egg=NodeGraphQt",
  "simple-onnx-processing-tools",
  "grandalf",
  "networkx",
]

[project.entry-points.console_scripts]
onnxgraphqt = "onnxgraphqt:main"

[tool.setuptools.packages.find]
exclude = ["docker", "build", "tmp"]

[project.urls]
"Homepage" = "https://github.com/fateshelled/OnnxGraphQt"
